--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body style="overflow-x: clip">
 <div class="w-screen min-h-screen flex flex-col md:flex-row bg-gray-100">
     <div class="bg-gray-50 md:w-7/10" id="main">
-        <div class="flex flex-col h-screen m-6 lg:m-10">
+        <div class="flex flex-col h-screen m-3 lg:m-10">
             <h1 class="text-4xl font-bold mb-4 text-center">Schedule Picker</h1>
-            <input class="p-2 border border-gray-400 rounded mb-4" id="search_bar" placeholder="Search..." type="text">
-            <table class="w-full bg-white rounded-lg p-4 table-auto border-collapse overflow-scroll overflow-x-scroll" id="results">
+            <input class="p-2 border border-gray-400 rounded mb-4 mx-2" id="search_bar" placeholder="Search..." type="text">
+            <table class="w-full bg-white rounded-lg p-4 table-auto border-collapse overflow-scroll overflow-x-scroll overflow-y-scroll h-screen" id="results">
                 <thead id="results-header">
                 <tr class="bg-gray-200">
                     <th class="px-4 py-2 border-gray-300 border">Name</th>
@@ -34,7 +34,7 @@
             </table>
         </div>
     </div>
-    <div class="bg-gray-300 md:w-3/10 p-4" id="sidebar" style="width: 30%">
+    <div class="bg-gray-300 w-full lg:w-3/10 p-4" id="sidebar" style="">
         <div>
             <h1>
                 <button class="collapse_toggle text-gray-700 font-extrabold text-xl" id="prefixes_collapse"> ></button>
@@ -114,6 +114,19 @@
     /* Show the tooltip text when you mouse over the tooltip container */
     .tooltip:hover .tooltiptext {
         visibility: visible;
+    }
+
+    table {
+        display: inline-block;
+        overflow: auto;
+    }
+
+    th div {
+        position: absolute;
+    }
+
+    tr:nth-child(even) {
+        background: #EEE;
     }
 </style>
 <script src="schedule.js"></script>
